# Graph-Of-Thought

./: .gitignore  README.md  main.py  pyproject.toml
.cursor/rules/: critic-agent.mdc  decomposition-agent.mdc  execute-agent.mdc  got-orchestrator.mdc  graph-expander.mdc  memory-curator.mdc  observability-agent.mdc  pruning-agent.mdc  reflection-agent.mdc  research-agent.mdc
.github/workflows/: ci.yml
examples/: simple_sandbox.py
got/api/: app.py
got/api/routes/: analyze_text.py
got/application/schemas/: analysis.py  graph.py  graph_spec.py
got/application/services/: execute_reasoning.py  openrouter.py  structure_text_service_llm.py
got/application/use_cases/: analyze_graph.py  analyze_reasoning.py  create_graph_from_text.py  validate_and_propagate_graph.py
got/domain/: __init__.py
got/domain/events/: __init__.py  contradiction_detected.py  cycle_detected.py  edge_added.py  edge_events.py  graph_updated.py  node_created.py  node_events.py  node_removed.py
got/domain/model/: __init__.py  edge.py  graph.py  node.py
got/domain/model/value_objects/: __init__.py  confidence.py  node_type.py  relation_type.py
got/domain/ops/: __init__.py  add_edge.py  add_node.py  remove_edge.py  remove_node.py  update_node_confidence.py
got/domain/reasoning/: README.md  violations.py
got/domain/reasoning/analysis/: __init__.py  analysis_service.py  connectivity.py  contradiction_detector.py  critical_paths.py
got/domain/reasoning/propagation/: __init__.py  base_propagator.py  causal_propagator.py  (+3 more)
got/tests/: __init__.py  test_validation_propagation_flow.py
(+6 files in other folders)
